# SmartLabOOP

./: CMakeLists.txt  README.md
src/: array.h  base.h  figures.h  main.cpp  point.h
test/: test_figure.cpp
